--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "@josushu0/eslint-config",
-  "version": "1.0.0",
-  "description": "My eslint style guide",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [
-    "eslint"
-  ],
-  "author": "josushu0",
-  "license": "MIT"
+	"name": "@josushu0/eslint-config",
+	"version": "1.0.0",
+	"description": "My eslint style guide",
+	"main": "index.js",
+	"keywords": [
+		"eslint"
+	],
+	"author": "josushu0",
+	"license": "MIT",
+	"peerDependencies": {
+		"eslint": ">=6.2.0"
+	}
 }
